2016-11-13  Eric Herman <eric@freesa.org>

	reorganize the string parsing, improve naming
	make Ehbi_log_error macro names less "shouty"

	* src/ehbigint-str.h: "semi-public" functions, not in ehbigint.h
	* src/ehbigint-str.c: move all the string stuff here
	* src/ehbigint-util.h: move out the string stuff
	* src/ehbigint-util.c: move out the string stuff
	* src/ehbigint-log.c: reference ehbigint-str.h
	* src/ehbigint.c: reference ehbigint-str.h
	* Makefile.am: include new ehbigint-str.*

2016-11-06  Eric Herman <eric@freesa.org>

	fight with autotools to get backtrace to work, defeated

	remove bi-calc from build

	* configure.ac: add checks for backtrace, backtrace_symbols_fd
	* Makefile.am: head->desk, just define _POSIX_SOURCE and retreat
	* src/ehbigint-log.h: add more concise ehbi_debug_to_hex
	* src/ehbigint-log.c: ifdef _POSIX_SOURCE; ehbi_debug_to_hex
	* tests/test-mul.c: expand test a bit


2016-11-05  Eric Herman <eric@freesa.org>

	fix a bug in ehbi_bytes_shift_left

	it would read bytes from off the end of the array!

	* tests/test-shift-left.c: demostrate the bug
	* src/ehbigint.c: fix the bug
	* Makefile.am: include the new test
	* .gitignore: exclude the new test
	* src/ehbigint-log.h: add "const" qualifier
	* src/ehbigint-log.c: add "const" qualifier
	* tests/test-mul.c: expand the test a bit

2016-11-04  Eric Herman <eric@freesa.org>

	reorganize code: split logging and util functions out
	replace EHBI_ENSURE_POSIX with EBHI_CAN_BACKTRACE
	prefix some internal functions with ehbi_ for clarity

	* src/ehbigint-log.h: renamed from ehbigint-error.h
	* src/ehbigint-error.h: renamed to ehbigint-log.h
	* src/ehbigint-log.c: logging functions
	* src/ehbigint-util.h: decimal-to-hex functions, stack-alloc
	* src/ehbigint-util.c: extracted from ehbigint.c
	* src/ehbigint.h: pulled error codes back in
	* src/ehbigint.c: use the new headers, moved support functions out
	* demos/bi-calc.c: cleaned this up a bit
	* Makefile.am: use the new headers and such
