@@ -1,8 +1,10 @@
 2016-11-13  Eric Herman <eric@freesa.org>
 
+	implement "long mulitiplication" rather than loop-increment
 	reorganize the string parsing, improve naming
 	make Ehbi_log_error macro names less "shouty"
 
+	* src/ehbigint.c: rewrite ehbi_mul, reference ehbigint-str.h
 	* src/ehbigint-str.h: "semi-public" functions, not in ehbigint.h
 	* src/ehbigint-str.c: move all the string stuff here
 	* src/ehbigint-util.h: move out the string stuff
